# NVi-PFA

./: .gitignore  README.md  local.properties
app/: build.gradle
app/jni/: Application.mk
app/jni/src/: Android.mk  CMakeLists.txt  Config_Utils.cxx  Config_Utils.hxx  Gui.cxx  Gui.hxx  MIDI.cxx  MIDI.hxx  Nlist.cxx  Nlist.hxx  Player.cxx  README.md  Sequ.cxx  Sequ.hxx  Utils.cxx  Utils.hxx  audio_effects.cxx  audio_effects.hxx  canvas.cxx  canvas.hxx  common.hxx  dev_test.hxx  file_utils.cxx  file_utils.hxx  source_info.md
app/src/main/: AndroidManifest.xml
app/src/main/java/com/qsp/nvpfa/: NvpfaActivity.java
app/src/main/res/values/: strings.xml  styles.xml
scripts/: allow-scripts  clr-build-cache  gen-icons
